# python-project-50

./: .gitignore  Makefile  README.md  makefile  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  core.py  parser.py
gendiff/formatters/: helpers.py  json.py  plain.py  stylish.py
gendiff/modules/: build_diff.py  format_changelog.py  generate_diff.py  make_changelog.py  parse_file_formats.py  parse_files.py
gendiff/scripts/: gendiff.py
tests/: test_build_diff.py  test_flat.py  test_flat_json.py  test_format_changelog.py  test_generate_diff.py  test_json.py  test_make_changelog.py  test_nested.py  test_parse_files.py  test_plain.py
tests/fixtures/: only_added1.json  only_added1.yaml
tests/test_data/json/: expected_json.txt
tests/test_data/nested/: expected_stylish.txt
